<resources>

    <!-- XML -->
    <string name="app_name">JustJava</string>
    <string name="name">Name</string>
    <string name="toppings">toppings</string>
    <string name="Whipped_cream">Whipped cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">order summary</string>
    <string name="order">order</string>

    <!-- JAVA -->
    <string name="A_Lot_Of_Coffee">you can\'t order more than one hundred cups of coffee</string>
    <string name="too_few_coffee">you can\'t order less than one cup of coffee</string>
    <string name="mailto">mailto</string>
    <string name="emailSubject">JustJava order for  </string>
    <string name="nameInTotal">"Name: "</string>
    <string name="addCream">"\nAdd Whipped Cream? "</string>
    <string name="addChoco">"\nAdd chocolate? "</string>
    <string name="quantityInTotal">"\nQuantity: "</string>
    <string name="total">"\nTotal: "</string>
    <string name="thx">\nThank you!</string>


</resources>
